# ai-torturepet

./: README.md
.github/workflows/: android-build.yml
android-app/: README_ANDROID_FIRSTHALF.md  settings.gradle  settings.gradle.bak  settings.gradle.pre-wrapper.bak
android-app/app/: build.gradle  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/example/aitorture/: ForegroundBrainService.kt  MainActivity.kt  NativeBrain.kt  StartupActivity.kt  Storage.kt
cloud/agent-manager/: index.js  package.json
native-brain/: CMakeLists.txt
native-brain/include/: reservoir.h
native-brain/src/: native_bridge.cpp  reservoir.cpp
unity-skeleton/Assets/Scripts/: RagdollController.cs
